--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^4.4.2",
+    "@hcaptcha/react-hcaptcha": "^0.3.6",
+    "@hookform/resolvers": "^2.5.2",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
+    "@sendgrid/mail": "^7.4.4",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.8.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/react": "17.0.9",
