--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@sendgrid/mail": "^7.4.4",
+    "lru-cache": "^6.0.0",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -23,6 +24,7 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/lru-cache": "^5.1.0",
     "@types/react": "17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
