--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "prepare": "husky install",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint \"**/*.{ts,tsx}\""
   },
   "dependencies": {
     "@fontsource/roboto": "^4.4.2",
@@ -17,9 +18,9 @@
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@sendgrid/mail": "^7.4.4",
     "lru-cache": "^6.0.0",
-    "next": "10.2.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^11.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^7.8.2",
     "yup": "^0.32.9"
   },
@@ -29,12 +30,9 @@
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "eslint": "^7.27.0",
+    "eslint-config-next": "^11.0.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.0",
