--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint \"**/*.{ts,tsx}\""
+    "lint": "next lint --dir features --dir pages --dir styles"
   },
   "dependencies": {
     "@fontsource/roboto": "^4.4.2",
@@ -36,6 +36,7 @@
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.0",
+    "prettier-plugin-organize-imports": "^2.2.0",
     "typescript": "4.3.2"
   }
 }
