--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.8.2",
+    "react-uid": "^2.3.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
